--- a/web-ui/index-ctsa.html
+++ b/web-ui/index-ctsa.html
@@ -138,12 +138,12 @@
                                   style="font-size: 20px;color:rgb(243, 243, 243);">
                                 2
                             </span>
-                        </span>- Điểm trung bình tổng hiện tại?</span><br>
+                        </span>- Điểm trung bình tất cả các môn trong năm học hiện tại?</span><br>
                     <div class="hideaway role2 mx-4 pl-4 my-2"
                          style="border-left-style: dashed; border-width:3px">
 
                         <input type="text"
-                               class="form-control my-2 mx-1"
+                               class="my-2 mx-1"
                                id="highSchoolAverage"
                                placeholder="Điểm trung bình của bạn..."
                                onkeypress="retrieveAverage(this)"
@@ -164,201 +164,221 @@
                         <div class="row">
                             <button value="1"
                                     class="characteristic btn btn-outline-dark btn-lg btn-block col-md-5 my-2 mx-1"
-                                    onclick="retrieveCharacteristic(this)">
+                                    onclick="retrieveCharacteristic(this)"
+                                    onmouseover="mouseOverLeft()"
+                                    onmouseout="mouseOut()">
                                 Hướng nội
                             </button>
                             <button value="2"
                                     class="characteristic btn btn-outline-dark btn-lg btn-block col-md-5 my-2 mx-1"
-                                    onclick="retrieveCharacteristic(this)"">
+                                    onclick="retrieveCharacteristic(this)"
+                                    onmouseover="mouseOverRight()"
+                                    onmouseout="mouseOut()">
                                 Hướng ngoại
                             </button>
+                            <p id="description"
+                               style="font-style:italic;color: #ff6414"></p>
                         </div>
                     </div>
                     <div id="confirm"
-                                    class="hideaway text-center">
-                                <button class="btn btn-info btn-lg my-3 "
-                                        style="background-color:#ff6414; border: none"
-                                        onclick="sendInputForSuggestion()">
-                                    Nhận gợi ý
-                                </button>
-                        </div>
+                         class="hideaway text-center">
+                        <button class="btn btn-info btn-lg my-3 "
+                                style="background-color:#ff6414; border: none"
+                                onclick="sendInputForSuggestion()">
+                            Nhận gợi ý
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-        <script>
-            // Pupils clicked
-            $("#student").on('click', () => {
-                $("#choose").hide(600);
-                $("#askform").show(600);
-                $(".role1").slideDown(600);
-            })
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script>
+        // Pupils clicked
+        $("#student").on('click', () => {
+            $("#choose").hide(600);
+            $("#askform").show(600);
+            $(".role1").slideDown(600);
+        })
 
-            // Freshmen clicked
-            $("#college").on('click', () => {
-                $("#choose").hide(600);
-                $("#askform").show(600);
-                $(".role1").slideDown(600);
-            })
+        // Freshmen clicked
+        $("#college").on('click', () => {
+            $("#choose").hide(600);
+            $("#askform").show(600);
+            $(".role1").slideDown(600);
+        })
 
-            let count = 0;
+        let count = 0;
 
-            let pupilInput = {
+        let pupilInput = {
+            id: 0,
+            characteristic: 0,
+            highSchoolAverage: 0,
+            entranceExamInput: null,
+            highSchoolTopInputs: []
+        }
+
+        let highSchoolTopInputNames = []
+
+        $(() => {
+            let subjectsSelector = $('#chooseSubjects')
+            subjectsSelector.empty()
+
+            axios.get('http://localhost:8080/high-school-subjects')
+                .then((response) => {
+                    let subjects = response.data
+                    subjects.forEach(subject => {
+                        let subjectButton = $('<button>', {
+                            class: 'btn btn-outline-dark my-2 mx-1 rolebtn',
+                            value: subject.id,
+                            text: subject.vietnamese,
+                            onclick: 'choose(this)'
+                        }).appendTo(subjectsSelector)
+                    });
+                })
+        })
+
+        function choose(subject) {
+            count++
+            subject.classList.add("selected")
+            addToTopSubjects(subject, count)
+            highSchoolTopInputNames.push(subject.textContent)
+            if (count > 2) {
+                $("#chooseSubjects").slideUp(600)
+
+                let subjectsMarks = $('#subjectsMarks')
+                subjectsMarks.slideDown(600)
+                subjectsMarks.empty()
+                for (var i = 0 in pupilInput.highSchoolTopInputs) {
+                    subjectsMarks.append(createMarkInput(pupilInput.highSchoolTopInputs[i], highSchoolTopInputNames[
+                        i]))
+                }
+            }
+        }
+
+        function addToTopSubjects(subject, weight) {
+            let topSubject = {
                 id: 0,
-                characteristic: 0,
-                highSchoolAverage: 0,
-                entranceExamInput: null,
-                highSchoolTopInputs: []
+                suggestedMajorId: 0,
+                subjectId: subject.value,
+                mark: 0,
+                weight: weight
             }
 
-            let highSchoolTopInputNames = []
+            pupilInput.highSchoolTopInputs.push(topSubject)
+        }
 
-            $(() => {
-                let subjectsSelector = $('#chooseSubjects')
-                subjectsSelector.empty()
-
-                axios.get('http://localhost:8080/high-school-subjects')
-                    .then((response) => {
-                        let subjects = response.data
-                        subjects.forEach(subject => {
-                            let subjectButton = $('<button>', {
-                                class: 'btn btn-outline-dark my-2 mx-1 rolebtn',
-                                value: subject.id,
-                                text: subject.vietnamese,
-                                onclick: 'choose(this)'
-                            }).appendTo(subjectsSelector)
-                        });
-                    })
+        function createMarkInput(subject, vietnamese) {
+            let subjectDiv = $('<div>', {
+                id: 'topSubject' + subject.weight,
+                value: subject.weight,
+                class: 'row mx-2'
             })
 
-            function choose(subject) {
-                count++
-                subject.classList.add("selected")
-                addToTopSubjects(subject, count)
-                highSchoolTopInputNames.push(subject.textContent)
-                if (count > 2) {
-                    $("#chooseSubjects").slideUp(600)
+            let name = $('<button>', {
+                class: 'btn btn-outline-dark my-2 mx-1 selected',
+                text: vietnamese,
+            }).appendTo(subjectDiv)
 
-                    let subjectsMarks = $('#subjectsMarks')
-                    subjectsMarks.slideDown(600)
-                    subjectsMarks.empty()
-                    for (var i = 0 in pupilInput.highSchoolTopInputs) {
-                        subjectsMarks.append(createMarkInput(pupilInput.highSchoolTopInputs[i], highSchoolTopInputNames[
-                            i]))
-                    }
-                }
-            }
+            let markInput = $('<input>', {
+                type: 'number',
+                id: 'mark' + subject.weight,
+                value: '',
+                class: 'form-control my-2 mx-1',
+                placeholder: 'Điểm của bạn...',
+                onkeypress: 'retrieveMark(this)',
+                style: 'width: 300px'
+            }).appendTo(subjectDiv)
 
-            function addToTopSubjects(subject, weight) {
-                let topSubject = {
-                    id: 0,
-                    suggestedMajorId: 0,
-                    subjectId: subject.value,
-                    mark: 0,
-                    weight: weight
-                }
+            return subjectDiv
+        }
 
-                pupilInput.highSchoolTopInputs.push(topSubject)
-            }
-
-            function createMarkInput(subject, vietnamese) {
-                let subjectDiv = $('<div>', {
-                    id: 'topSubject' + subject.weight,
-                    value: subject.weight,
-                    class: 'row mx-2'
+        function retrieveMark(inputField) {
+            // console.log(document.getElementById("score1").value);
+            let mark = inputField.value;
+            if (event.keyCode == 13 &&
+                document.getElementById("mark1").value != "" &&
+                document.getElementById("mark2").value != "" &&
+                document.getElementById("mark3").value != ""
+            ) {
+                pupilInput.highSchoolTopInputs.forEach((subject) => {
+                    subject.mark = $('#mark' + subject.weight).val()
                 })
 
-                let name = $('<button>', {
-                    class: 'btn btn-outline-dark my-2 mx-1 selected',
-                    text: vietnamese,
-                }).appendTo(subjectDiv)
-
-                let markInput = $('<input>', {
-                    type: 'number',
-                    id: 'mark' + subject.weight,
-                    value: '',
-                    class: 'form-control my-2 mx-1',
-                    placeholder: 'Điểm của bạn...',
-                    onkeypress: 'retrieveMark(this)',
-                    style: 'width: 300px'
-                }).appendTo(subjectDiv)
-
-                return subjectDiv
-            }
-
-            function retrieveMark(inputField) {
-                // console.log(document.getElementById("score1").value);
-                let mark = inputField.value;
-                if (event.keyCode == 13 &&
-                    document.getElementById("mark1").value != "" &&
-                    document.getElementById("mark2").value != "" &&
-                    document.getElementById("mark3").value != ""
-                ) {
-                    pupilInput.highSchoolTopInputs.forEach((subject) => {
-                        subject.mark = $('#mark' + subject.weight).val()
-                    })
-
-                    $(".role1").slideUp(600);
-                    $(".role2").slideDown(600);
-                    $(".role3").slideUp(600);
-                    $("#confirm").hide(600);
-                }
-            }
-
-            function retrieveAverage(inputAverage) {
-                if (event.keyCode == 13) {
-                    pupilInput.highSchoolAverage = inputAverage.value
-
-                    $(".role1").slideUp(600);
-                    $(".role2").slideUp(600);
-                    $(".role3").slideDown(600);
-                    $("#confirm").hide(600);
-                }
-            }
-
-            function retrieveCharacteristic(characteristic) {
-                $('.characteristic').removeClass('selected')
-                characteristic.classList.add('selected')
-                pupilInput.characteristic = characteristic.value
-            }
-
-            function sendInputForSuggestion() {
-                axios.post('http://localhost:8080/suggestions/pupils', pupilInput)
-                    .then((response) => {
-                        console.log(response.data)
-                    })
-
-                // sessionStorage.setItem('pupilInput', JSON.stringify(pupilInput))
-                // window.location = 'result.html'
-            }
-
-            $(".role3").click(function () {
-                $(".role1").slideUp(600);
-                $(".role2").slideUp(600);
-                $("#confirm").show(600);
-            });
-
-            $(".head1").click(function () {
-                $(".role1").slideDown(600);
-                $(".role2").slideUp(600);
-                $(".role3").slideUp(600)
-                $("#confirm").hide(600);
-            });
-            $(".head2").click(function () {
                 $(".role1").slideUp(600);
                 $(".role2").slideDown(600);
                 $(".role3").slideUp(600);
                 $("#confirm").hide(600);
-            });
-            $(".head3").click(function () {
+            }
+        }
+
+        function retrieveAverage(inputAverage) {
+            if (event.keyCode == 13) {
+                pupilInput.highSchoolAverage = inputAverage.value
+
                 $(".role1").slideUp(600);
                 $(".role2").slideUp(600);
                 $(".role3").slideDown(600);
                 $("#confirm").hide(600);
-            });
-        </script>
+            }
+        }
+
+        function retrieveCharacteristic(characteristic) {
+            $('.characteristic').removeClass('selected')
+            characteristic.classList.add('selected')
+            pupilInput.characteristic = characteristic.value
+        }
+
+        function sendInputForSuggestion() {
+            axios.post('http://localhost:8080/suggestions/pupils', pupilInput)
+                .then((response) => {
+                    console.log(response.data)
+                })
+
+            // sessionStorage.setItem('pupilInput', JSON.stringify(pupilInput))
+            // window.location = 'result.html'
+        }
+
+        $(".role3").click(function () {
+            $(".role1").slideUp(600);
+            $(".role2").slideUp(600);
+            $("#confirm").show(600);
+        });
+
+        $(".head1").click(function () {
+            $(".role1").slideDown(600);
+            $(".role2").slideUp(600);
+            $(".role3").slideUp(600)
+            $("#confirm").hide(600);
+        });
+        $(".head2").click(function () {
+            $(".role1").slideUp(600);
+            $(".role2").slideDown(600);
+            $(".role3").slideUp(600);
+            $("#confirm").hide(600);
+        });
+        $(".head3").click(function () {
+            $(".role1").slideUp(600);
+            $(".role2").slideUp(600);
+            $(".role3").slideDown(600);
+            $("#confirm").hide(600);
+        });
+        function mouseOverLeft() {
+            document.getElementById("description").innerHTML = "*<b>Hướng nội</b>: Khuynh "
+                + "hướng quan tâm đến cuộc sống tinh thần của bản thân người đó, có xu hướng mở rộng khi"
+                + "suy nghĩ và suy nhược khi phải giao tiếp với những người khác.";
+        }
+        function mouseOverRight() {
+            document.getElementById("description").innerHTML = "*<b>Hướng ngoại</b>: Những "
+                + "hành động, trạng thái hay thói quen chủ yếu quan tâm tới việc làm vừa lòng những"
+                + " người khác, có xu hướng thích thú khi tương tác, giao tiếp với con người và nói "
+                + "chung là nói nhiều, nhiệt tình, thích giao lưu và quyết đoán";
+        }
+        function mouseOut() {
+            document.getElementById("description").innerHTML = "";
+        }   
+    </script>
 </body>
 
 </html>
