--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -83,19 +83,15 @@
             <div class="row justify-content-around">
                 <div id="suggest2"
                      class="col-md-3 text-center result"
-                     data-toggle="modal"
-                     data-target="#JobDescriptionModal"
                      style="pointer-events: auto;">
                 </div>
                 <div id="suggest1"
                      class="col-md-3 text-center result"
-                     data-toggle="modal"
-                     data-target="#JobDescriptionModal">
+                     style="pointer-events: auto;">
                 </div>
                 <div id="suggest3"
                      class="col-md-3 text-center result"
-                     data-toggle="modal"
-                     data-target="#JobDescriptionModal">
+                     style="pointer-events: auto;">
                 </div>
             </div>
         </div>
@@ -127,8 +123,6 @@
                         <div id="mathMark">
                             <span>Toán học:</span>
                             <input class="rangeValues">
-                            <button type="button"
-                                    class="btn btn-dark">Không có điểm</button>
                             <section style="padding-bottom:20px"
                                      class="range-slider">
                                 <input value="5"
@@ -315,16 +309,10 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
                         nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
-                   
+
                 </div>
-                <div class="modal-body ">
+                <div class="modal-body">
                     <div class="row text-center">
-                        <!-- <div class="col-md-6">
-                            <h2>Hiện tại</h2>
-                        </div>
-                        <div class="col-md-6 my-auto">
-                            <h2>4 năm tới</h2>
-                        </div> -->
                         <div class="col-md-12 ml-3">
                             <h2>Mức lương khởi điểm</h2>
                         </div>
@@ -333,8 +321,12 @@
                         <div id="triangle"></div>
                         <div class="row banner-description justify-content-between my-auto"
                              style="font-size: 1.8em; font-style: italic">
-                            <div class="col-md-3 my-4 ml-5">
-                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            <div class="col-md-3 my-4 ml-5"
+                                 style="margin-top: 0.5rem!important">
+                                <b id="latestSalary"
+                                   style="color:rgb(240, 240, 240)">
+
+                                </b>
                             </div>
                             <div class="col-md-2">
                                 <img src="./images/money-icon.png"
@@ -344,26 +336,29 @@
                                      style="margin-top:-25px; margin-bottom:-20px;">
                             </div>
                             <div class="col-md-3 my-4 mr-5"
-                                 style="text-align: right">
+                                 style="text-align: right; margin-top: 0.5rem!important">
+                                <b id="predictedSalary">
 
-                                <b>Lorem ipsum</b>
+                                </b>
                             </div>
                         </div>
                         <div id="triangle2"></div>
                     </div>
                     <div class="row justify-content-center text-center">
-
                         <div class="col-md-12 ml-3">
                             <h2>Tổng số nhân lực</h2>
                         </div>
                     </div>
                     <div class="row">
-
                         <div id="triangle"></div>
                         <div class="row banner-description justify-content-between my-auto"
                              style="font-size: 1.8em; font-style: italic">
-                            <div class="col-md-3 my-4 ml-5">
-                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            <div class="col-md-3 my-4 ml-5"
+                                 style="margin-top: 0.5rem!important">
+                                <b id="latestHumanResource"
+                                   style="color:rgb(240, 240, 240)">
+
+                                </b>
                             </div>
                             <div class="col-md-2">
                                 <img src="./images/human-resources.png"
@@ -373,16 +368,15 @@
                                      style="margin-top:-25px; margin-bottom:-20px;">
                             </div>
                             <div class="col-md-3 my-4 mr-5"
-                                 style="text-align: right">
+                                 style="text-align: right; margin-top: 0.5rem!important">
+                                <b id='predictedHumanResource'>
 
-                                <b>Lorem ipsum</b>
+                                </b>
                             </div>
                         </div>
                         <div id="triangle2"></div>
-
                     </div>
                     <div class="row justify-content-center text-center">
-
                         <div class="col-md-12 ml-3">
                             <h2>Thông tin bổ sung</h2>
                         </div>
@@ -391,8 +385,12 @@
                         <div id="triangle"></div>
                         <div class="row banner-description justify-content-between my-auto"
                              style="font-size: 1.8em; font-style: italic">
-                            <div class="col-md-3 my-4 ml-5">
-                                <b style="color:rgb(240, 240, 240)">Lorem ipsum</b>
+                            <div class="col-md-3 my-4 ml-5"
+                                 style="margin-top: 0.5rem!important">
+                                <b id="latestSupportingInfomation"
+                                   style="color:rgb(240, 240, 240)">
+
+                                </b>
                             </div>
                             <div class="col-md-2">
                                 <img src="./images/additional.png"
@@ -402,9 +400,10 @@
                                      style="margin-top:-25px; margin-bottom:-20px;">
                             </div>
                             <div class="col-md-3 my-4 mr-5"
-                                 style="text-align: right">
+                                 style="text-align: right; margin-top: 0.5rem!important">
+                                <b id='predictSupportingInfomation'>
 
-                                <b>Lorem ipsum</b>
+                                </b>
                             </div>
                         </div>
                         <div id="triangle2"></div>
@@ -467,11 +466,11 @@
 
         function showSuggestions(suggestions) {
             for (var i = 0; i < 3;) {
-                i++;
-                let suggestion = suggestions[i]
+                let suggestion = suggestions[i++]
 
                 let suggestionDiv = $('#suggest' + i)
                 suggestionDiv.empty()
+                suggestionDiv.attr('onclick', 'showInfoModal(' + suggestion.major.id + ')')
 
                 $('<span>', {
                     class: 'fa fa-star',
@@ -499,6 +498,60 @@
                     width: '180'
                 }).appendTo(suggestionDiv)
             }
+        }
+
+        function showInfoModal(majorId) {
+            let jobPredictionModal = $("#JobDescriptionModal")
+
+            // Salary
+            // Latest
+            axios.get('http://localhost:8006/salaries/latest?majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#latestSalary').html(numberWithCommas(model.actual) + '<br/>VNĐ')
+                })
+            // Prediction
+            axios.get('http://localhost:8006/salaries/predictions?year=2021&majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#predictedSalary').html(numberWithCommas(Math.round(model.forecast)) + '<br/>VNĐ')
+                })
+
+            // Human Resource
+            // Latest
+            axios.get('http://localhost:8006/human-resources/latest?majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#latestHumanResource').html(numberWithCommas(model.actual) + '<br/>người')
+                })
+            // Prediction
+            axios.get('http://localhost:8006/human-resources/predictions?year=2021&majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#predictedHumanResource').html(numberWithCommas(Math.round(model.forecast)) + '<br/>người')
+                })
+
+            jobPredictionModal.modal("toggle");
+
+            // Supporting Infomation
+            // Latest
+            axios.get('http://localhost:8006/supporting-information/latest?majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#latestSupportingInfomation').html(numberWithCommas(model.actual) + '<br/>' + model.unit)
+                })
+            // Prediction
+            axios.get('http://localhost:8006/supporting-information/predictions?year=2021&majorId=' + majorId)
+                .then((response) => {
+                    let model = response.data
+                    $('#predictSupportingInfomation').html(numberWithCommas(Math.round(model.forecast)) + '<br/>' + model.unit)
+                })
+
+            jobPredictionModal.modal("toggle");
+        }
+
+        const numberWithCommas = (x) => {
+            return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
     </script>
 </body>
